@@ -1,6 +1,6 @@
 Package: godi-batteries
-Version: 0.20081011
-Revision: 4
+Version: 0.20081109
+Revision: 0
 Depends: godi-ocaml (>= 3.10.2), godi-findlib (>= 1.2), godi-type-conv, godi-bin-prot, godi-camomile (>= 0.7), godi-sexplib (>= 3.7.0), godi-zip (>= 1.0)
 Build-Depends: godi-findlib (>= 1.2), godi-type-conv, godi-sexplib (>= 3.7.0)
 Sources: http://forge.ocamlcore.org/frs/download.php/63/batteries-0.20081011.tgz
