@@ -23,18 +23,73 @@
 
 (** High-order abstract I/O.
     
-    IO module simply deals with abstract inputs/outputs. It provides a
-    set of methods for working with these IO as well as several
-    constructors that enable to write to an underlying channel, buffer,
-    or enum.
+    This module deals with {!type: input}s and {!type:
+    output}s. Inputs are manners of getting information from the
+    outside world and into your program (for instance, reading from
+    the network, from a file, etc.)  Outputs are manners of getting
+    information out from your program and into the outside world (for
+    instance, sending something onto the network, onto a file, etc.)
+    In other words, if you are looking for a way to modify files, read
+    from the network, etc., you're in the right place.
 
-    If you are looking for a way to read data from a file, a network
-    connexion, the keyboard... or to write data to a file, to the
-    network, to the screen... chances are that the operations are
-    defined in this module. Note that this module does not define
-    how to open files, network connexions, etc.
+    To perform I/O, you first need to {e open} your {!type: input} or
+    your {!type: output}. Chances are that there is an {e opening}
+    operation for this task. Note that most opening operations are
+    defined in their respective module.  Operations for opening files
+    are defined in module {!File}, operations for opening
+    communications with the network or with other processes are
+    defined in module {!Unix}. Opening operations related to
+    compression and decompression are defined in module {!Compress},
+    etc.
 
-    To open files, see {!File}.
+    Once you have opened an {!type: input}, you may read the data it
+    contains by using functions such as {!read} (to read one
+    character), {!nread} or {!val: input} (to read one string) or one
+    of the [read_*] functions. If you need not one information but a
+    complete enumeration, for instance for processing many information
+    before writing them, you may also convert the input into an
+    enumeration, by using one of the [*s_of] functions.
+
+    Once you have opened an {!type: output}, you may write data to
+    this output by using functions scuh as {!write} (to write one
+    char), {!nwrite} or {!val: output} (to write one string) or one of
+    the [write_*] functions. If you have not just one piece of data
+    but a complete enumeration, you may write this whole enumeration
+    to the output by using one of the [write_*s] functions. Note that
+    most operations on output are said to be {e buffered}. This means
+    that small writing operations may be automatically delayed and
+    grouped into large writing operations, as these are generally
+    faster and induce less wear on the hardware. Occasionally, you
+    may wish to force all waiting operations to take place {e now}.
+    For this purpose, you may either function {!flush} or function
+    {!flush_out}.
+    
+    Once you have finished using your {!type: input} or your {!type:
+    output}, chances are that you will want to close it. This is not a
+    strict necessity, as OCaml will eventually close it for you when
+    it detects that you have no more need of that {!type:
+    input}/{!type: output}, but this is generally a good policy, as
+    this will let other programs access the resources which are
+    currently allocated to that {!type:input}/{!type:output} --
+    typically, under Windows, if you are reading the contents of a
+    file from a program, no other program may read the contents of
+    that file simultaneously and you may also not rename or move the
+    file to another directory. To close an {!type: input}, use
+    function {!close_in} and to close an {!type: output}, use function
+    {!close_out}.
+
+    {b Note} Some {!type:input}s are built on top of other
+    {!type:input}s to provide transparent translations (e.g.
+    on-the-fly decompression of a file or network information) and
+    that some {!type:output}s are built on top of other
+    {!type:output}s for the same purpose (e.g. on-the-fly compression
+    of a file or network information). In this case, closing the
+    "outer" {!type:input}/{!type:output} (e.g. the
+    decompressor/compressor) will {e not} close the "inner"
+    {!type:input}/{!type:output} (e.g. access to the file or to the
+    network). You will need to close the "inner"
+    {!type:input}/{!type:output}, which will automatically flush
+    the outer {!type:input}/{!type:output} and close it.
 
     @author Nicolas Cannasse
     @author David Teller
@@ -167,41 +222,6 @@ val close_all : unit -> unit
     [stdout], [stderr], [stdnull].*)
 (**/**)
 
-(** {6 Unicode extensions} 
-
-    All of the following functions deal only with UTF-8 encoded inputs/outputs
-*)
-
-val read_uchar: input -> UChar.t
-(** Read one UChar from a UTF-8 encoded input*)
- 
-val read_rope: input -> int -> Rope.t
-(** Read up to n uchars from a UTF-8 encoded input*)
- 
-val read_uline: input -> Rope.t
-(** Read a line of UTF-8*)
- 
-val read_uall : input -> Rope.t
-(** Read the whole contents of a UTF-8 encoded input*)
- 
-val write_uchar: _ output -> UChar.t -> unit
-(** Write one uchar to a UTF-8 encoded output.*)
-
-val write_rope : _ output -> Rope.t -> unit
-(** Write a character rope onto a UTF-8 encoded output.*)
-
-val write_uline: _ output -> Rope.t -> unit
-(** Write one line onto a UTF-8 encoded output.*)
-
-val write_uchars : _ output -> UChar.t Enum.t -> unit
-(** Write an enumeration of characters onto a UTF-8 encoded output.*)
-
-val write_ulines : _ output -> Rope.t Enum.t -> unit
-(** Write an enumeration of lines onto a UTF-8 encoded output.*)
-
-val write_ropes : _ output -> Rope.t Enum.t -> unit
-(** Write an enumeration of ropes onto a UTF-8 encoded output.*)
-
 (** {6 Creation of IO Inputs/Outputs} 
 
     To open a file for reading/writing, see {!File.open_file_in}
@@ -231,8 +251,6 @@ val combine : ('a output * 'b output) -> ('a * 'b) output
 (** [combine (a,b)] creates a new [output] [c] such that
     writing to [c] will actually write to both [a] and [b] *)
 
-
-
 val tab_out : ?tab:char -> int -> 'a output -> unit output
   (** Create an output shifted to the right by a number of white spaces
       (or [tab], if given).
@@ -241,7 +259,8 @@ val tab_out : ?tab:char -> int -> 'a output -> unit output
       which every new line starts with [n] white spaces.
       Raises [Invalid_argument] if [n] < 0.
 
-      Closing [tab_out n out] does not close [out].
+      Closing [tab_out n out] does not close [out]. Rather,
+      closing [out] closes [tab_out n out].
   *)
 
 
@@ -251,6 +270,9 @@ val tab_out : ?tab:char -> int -> 'a output -> unit output
 val read_all : input -> string
 (** read all the contents of the input until [No_more_input] is raised. *)
 
+val read_uall : input -> Rope.t
+(** Read the whole contents of a UTF-8 encoded input*)
+
 val pipe : unit -> input * unit output
 (** Create a pipe between an input and an ouput. Data written from
     the output can be read from the input. *)
@@ -259,7 +281,7 @@ val copy : ?buffer:int -> input -> _ output -> unit
 (** Read everything from an input and copy it to an output.
 
     @param buffer The size of the buffer to use for copying, in
-    bytes. By default, this is 1kb.
+    bytes. By default, this is 4,096b.
 *)
 
 val pos_in : input -> input * (unit -> int)
@@ -315,11 +337,20 @@ val read_float : input -> float
 val read_double : input -> float
 (** Read an IEEE double precision floating point value. *)
 
+val read_uchar: input -> UChar.t
+(** Read one UChar from a UTF-8 encoded input*)
+
 val read_string : input -> string
 (** Read a null-terminated string. *)
 
+val read_rope: input -> int -> Rope.t
+(** Read up to n uchars from a UTF-8 encoded input*)
+
 val read_line : input -> string
 (** Read a LF or CRLF terminated string. *)
+
+val read_uline: input -> Rope.t
+(** Read a line of UTF-8*)
 
 val write_byte : 'a output -> int -> unit
 (** Write an unsigned 8-bit byte. *)
@@ -342,15 +373,29 @@ val write_i64 : 'a output -> int64 -> unit
 val write_double : 'a output -> float -> unit
 (** Write an IEEE double precision floating point value. *)
 
+val write_uchar: _ output -> UChar.t -> unit
+(** Write one uchar to a UTF-8 encoded output.*)
+
 val write_float : 'a output -> float -> unit
 (** Write an IEEE single precision floating point value. *)
 
 val write_string : 'a output -> string -> unit
 (** Write a string and append an null character. *)
 
+val write_rope : _ output -> Rope.t -> unit
+(** Write a character rope onto a UTF-8 encoded output.*)
+
 val write_line : 'a output -> string -> unit
-(** Write a line and append a LF (it might be converted
-	to CRLF on some systems depending on the underlying IO). *)
+(** Write a line and append a line end.
+    
+    This adds the correct line end for your operating system.  That
+    is, if you are writing to a file and your system imposes that
+    files should end lines with character LF (or ['\n']), as Unix,
+    then a LF is inserted at the end of the line. If your system
+    favors CRLF (or ['\r\n']), then this is what will be inserted.*)
+
+val write_uline: _ output -> Rope.t -> unit
+(** Write one line onto a UTF-8 encoded output.*)
 
 (** Same operations as module {!IO}, but with big-endian encoding *)
 module BigEndian :
@@ -453,13 +498,6 @@ sig
 
 	val write_doubles : 'a output -> float Enum.t -> unit
 	  (** Write an enumeration of IEEE double precision floating point value. *)
-
-	val write_strings : 'a output -> string Enum.t -> unit
-	  (** Write an enumeration of strings, appending null characters. *)
-
-	val write_lines : 'a output -> string Enum.t -> unit
-	  (** Write an enumeration of lines, appending a LF (it might be converted
-	      to CRLF on some systems depending on the underlying IO). *)
 
 end
 
@@ -705,6 +743,9 @@ val write_bytes : 'a output -> int Enum.t -> unit
 val write_chars : 'a output -> char Enum.t -> unit
 (** Write an enumeration of chars. *)
 
+val write_uchars : _ output -> UChar.t Enum.t -> unit
+(** Write an enumeration of characters onto a UTF-8 encoded output.*)
+
 val write_ui16s : 'a output -> int Enum.t -> unit
 (** Write an enumeration of unsigned 16-bit words. *)
 
@@ -733,6 +774,13 @@ val write_lines : 'a output -> string Enum.t -> unit
 (** Write an enumeration of lines, appending a LF (it might be converted
     to CRLF on some systems depending on the underlying IO). *)
 
+val write_ropes : 'a output -> Rope.t Enum.t -> unit
+(** Write an enumeration of ropes onto a UTF-8 encoded output,
+    without appending a line-end.*)
+
+val write_ulines : _ output -> Rope.t Enum.t -> unit
+(** Write an enumeration of lines onto a UTF-8 encoded output.*)
+
 val write_bitss : nbits:int -> out_bits -> int Enum.t -> unit
 (** Write an enumeration of bits*)
 
@@ -745,23 +793,9 @@ val printf : 'a output -> ('b, 'a output, unit) format -> 'b
 
     @obsolete Prefer {!Languages.Printf.fprintf}*)
 
-(*val lmargin : int -> (_ output -> 'a -> unit) -> _ output -> 'a -> unit
-(** [lmargin n p] behaves as [p], with the exception that every new line from this
-    point will be shifted to the right by [n] white spaces*)*)
-
-
-
-(*val make_list_printer: ('a output -> 'b -> unit) -> string -> string -> string -> ('a output -> 'b list -> unit)
-(** Make a list printer
-
-    [make_list_printer printer start_symbol end_symbol separator] creates a printer for
-    lists, which prints [start_symbol] at the beginning of the list, [end_symbol] at
-    the end, uses [printer] for each element of the contents and separates these
-    elements with [separator]
-*)*)
-
 
 val default_buffer_size : int
+(**The default size for internal buffers.*)
 
 (**/**)
 val comb : ('a output * 'a output) -> 'a output
