@@ -1,5 +1,9 @@
 2008-11-09  David Teller  <David.Teller@univ-orleans.fr>
 
+	* src/core/extlib/IO.mli: Documentation added, functions reordered.
+
+	* src/core/extlib/IO.ml: [copy] now uses a default buffer or 4096
+
 	* src/core/extlib/extList.ml: [print_string] reimplemented with [sprintf2]
 
 	* src/core/extlib/extList.ml*: [print_string] renamed [sprint]
